# scripts-linux

./: .gitignore  00-pos-formatacao-cachyos.py  01-atualizar-sistema-cachyos.sh  02-navegador-extensoes-firefoxpwa.sh  03-criar-webapps-firefoxpwa.sh  04-validar-nvidia-jogos-steam.sh  05-configurar-github-scripts-linux.sh  06-configurar-google-drive-rclone.sh  07-configurar-montagem-discos-fstab.sh  08-configurar-kde-gestos-aparencia.sh  09-instalar-apps-jogos-comunicacao-dev.sh  10-fixar-numlock-cachyos.sh  11-instalar-antigravity-ide.sh  CLAUDE.md  README.md  autostart_lmstudio.sh  configurar-fstab-automount-cachyos.sh  corrigir-lentidao-apps-kde-cachyos.sh  criar-antigravity-desktop.sh  diag_solaar.sh  diagnosticar-apps-lentos-kde-cachyos.sh  fixar-numlock-cachyos.sh  pyproject.toml
fstab-backups/: fstab.20260601-165929.bak  fstab.20260601-223234.bak  fstab.20260601-224358.bak
legacy/: README_NOVO.md  configurar-fstab-automount-cachyos.sh  configurar-gesto-gnome-kde.sh  configurar-git-github-cachyos.sh
packaging/: AppRun  build-appimage.sh  entry.py  make_icon.py  reforja.desktop  reforja.spec  sisteminha.desktop  sisteminha.spec
postformat/: __init__.py  bootstrap.py  cli.py  core.py  desktop.py  hardware.py  installers.py  platform.py  steps.py  steps_base.py  tui.py
reforja/: bootstrap.py  cli.py  core.py  desktop.py  dispatch.py  hardware.py  installers.py  planning.py  platform.py  presets.py  steps_base.py  tui.py
scripts/: 00-preparar-ecossistema-cachyos.sh  01-atualizar-sistema-cachyos.sh  02-instalar-linux-toys.sh  03-navegador-e-webapps.sh  03-navegador-extensoes-firefoxpwa.sh  04-criar-webapps-firefoxpwa.sh  05-configurar-github-scripts-linux.sh  05-configurar-gpu.sh  06-configurar-github-scripts-linux.sh  06-configurar-google-drive-rclone.sh  07-configurar-google-drive-rclone.sh  07-configurar-montagem-discos-fstab.sh  08-configurar-montagem-discos-fstab.sh  09-ajustes-kde-gestos-numlock.sh  09-instalar-apps-jogos-comunicacao-dev.sh  10-instalar-apps-jogos-comunicacao-dev.sh  11-fixar-numlock-cachyos.sh  12-instalar-antigravity-ide.sh  (+4 more)
(+64 files in other folders)
