[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scripts-linux-postformat"
version = "1.0.0"
description = "Automacao pos-formatacao para Linux/KDE"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "InquirerPy",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "ruff",
]

[project.gui-scripts]
sisteminha-gui = "postformat.gui:main"

[tool.setuptools]
packages = ["postformat", "postformat.steps", "postformat.gui"]

[tool.setuptools.package-data]
"postformat.gui" = ["theme.qss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# O formatter ja gerencia a quebra de linha; E501 restante sao apenas strings
# longas (saidas/log em PT-BR) que nao devem ser quebradas.
ignore = ["E501"]

[tool.coverage.run]
source = ["postformat"]
