[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reforja"
version = "1.0.0"
description = "Automacao pos-formatacao para Linux/KDE"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "InquirerPy",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.gui-scripts]
reforja-gui = "reforja.gui:main"

[tool.setuptools]
packages = ["reforja", "reforja.steps", "reforja.gui"]

[tool.setuptools.package-data]
"reforja.gui" = ["theme.qss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# O formatter ja gerencia a quebra de linha; E501 restante sao apenas strings
# longas (saidas/log em PT-BR) que nao devem ser quebradas.
ignore = ["E501"]

[tool.coverage.run]
source = ["reforja"]
